# solagents-programs

./: CHANGELOG.md  Cargo.toml  README.md
agent-sol/: .vercelignore  Anchor.toml  CHANGELOG.md  README.md  SECURITY.md  test-e2e.mjs
agent-sol/api/: server.js
agent-sol/docs/: SKILL.md  api-reference.md  whitepaper.md
agent-sol/programs/agentic-commerce/: Cargo.toml  SKILL.md
agent-sol/programs/agentic-commerce/src/: errors.rs  hook_interface.rs  hooks.rs  lib.rs  state.rs
agent-sol/programs/agentic-commerce/src/instructions/: accept_admin.rs  claim_refund.rs  create_job.rs  initialize.rs  mod.rs  set_budget.rs  set_payment_mint.rs  set_provider.rs  update_config.rs
agent-sol/scripts/: build.sh  check-config.cjs  check-config2.cjs  create-test-token.mjs  decode-pool.mjs  deploy-devnet.sh  deploy.ps1  devnet-test.ts  find-commerce-config.mjs  init-bonding-curve.cjs  init-devnet.mjs  init-dividends.mjs  migrate-configs.mjs  migrate-pools.mjs  migrate-referral.mjs  sell-all-test-tokens.mjs  set-mint.cjs  test-decode.mjs  test-dividends.mjs  test-referrals.mjs  test-trade.mjs  tsconfig.scripts.json  update-config.mjs  wsl-setup.sh
agent-sol/web/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
deepcast/src/: cli.ts  (+2 more)
programs/bonding-curve/: Cargo.toml  SKILL.md
programs/bonding-curve/src/: constants.rs  lib.rs  state.rs
programs/bonding-curve/src/instructions/: claim_creator_fees.rs  claim_platform_fees.rs  claim_raydium_fees.rs  close_graduated_pool.rs  initialize.rs  migrate_config.rs  mod.rs
(+105 files in other folders)
