[package]
name = "bonding-curve"
version = "0.1.0"
description = "On-chain bonding curve AMM with Raydium graduation — pump.fun model for AI agent tokens."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
solana-security-txt = "1.1.2"
# Metaplex CPI done manually to avoid solana-program version conflicts
